Normalize styling for modules : make sure that some basic html tags like Hx and p have a correct default line-height and spacing

--- a/assets/front/scss/_modules.scss
+++ b/assets/front/scss/_modules.scss
@@ -6,3 +6,16 @@
 @import "modules/quote";
 @import "modules/button";
 @import "modules/simple_form";
+
+// Normalize styling for modules
+// Make sure that some basic html tags like Hx and p have a correct default line-height and spacing
+.sek-module-inner {
+  line-height: 1.5em;
+  h1, h2, h3, h4, h5, h6, p {
+    line-height: 1.5em;
+  }
+  p {
+    margin: 0 0 1em;
+    padding: 0;
+  }
+}
